# dne-appsec

./: .gitignore  env.sh  submit.sh  verify-env.sh
.bash/: submit.sh  survey.sh  verify-env.sh
KinD/: kind_config.yaml
panoptica/: kind.yaml  locustfile.py  main.tf  main_solution.txt  variables.tf  yelb.yaml
panoptica/Yelb/: yelb_deployment.yaml
panoptica/httpie/: httpie_escher_auth.py  pyproject.toml
panoptica/modules/panoptica/: main.tf  variables.tf
secure_app/: main.tf
secure_app/Sock-Shop/: sock-shop_deployment.yaml
secure_app/modules/secure_app/: appd_cluster_agent.tf  cluster-agent-operator.yaml  main.tf  variables.tf
